<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SlidingTiles</string>
    <string name="user_prompt">Username / E-mail:</string>
    <string name="pass_prompt">Password:</string>
    <string name="login_button">Login</string>
    <string name="emailPrompt">E-mail:</string>
    <string name="contentDescription">Android logo on jetpack</string>
    <string name="loginPrompt">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="play_as_guest">Play As Guest</string>
    <string name="welcomePrompt">Welcome Back To Sliding Tiles!</string>
    <string name="new_game">New Game</string>
    <string name="empty_profile_pic">empty profile pic</string>
    <string name="loadSavedGame">Load Saved Game</string>
    <string name="save_game" tools:ignore="ExtraTranslation">Save Game</string>
    <string name="view_scores" tools:ignore="ExtraTranslation">View Scores</string>
    <string name="sign_up">Sign Up</string>
    <string name="instructions_signup">Please Enter Your Personal Information</string>
    <string name="choose_a_password">Choose a Password</string>
    <string name="choosepass">Choose a Password:</string>
    <string name="confirm">Confirm Your Password:</string>
    <string name="diff_selection">Please Choose A Difficulty</string>
    <string name="easy">Easy (3x3, 5 undos)</string>
    <string name="medium">Medium (4x4, 3 Undos)</string>
    <string name="hard">Hard (5x5, 1 Undo)</string>
    <string name="logout">logout</string>
    <string name="undo">undo</string>
    <string name="move_counter">Moves: %1$d</string>
    <string name="attemptsStr">Chances: 5</string>
    <string name="attemptsRemaining">ATTEMPTS LEFT:</string>
    <string name="constant_time">Time - 0:0:0</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="scoring">Scoring Menu</string>
    <string name="myScores">My Scores</string>
    <string name="STScore">Sliding Tiles</string>
    <string name="TTTScore">Tic Tac Toe</string>
    <string name="MGScore">Matching Game</string>
    <string name="myScoresTitle">My Game High-Scores</string>
    <string name="mySTScore">My Sliding Tiles Score: %1$d</string>
    <string name="myTTTScore">My Tic Tac Toe Score: %1$d</string>
    <string name="myMGScore">My Matching Game Score: %1$d</string>
    <string name="topTitle">Top 10 Scores For: %1$s</string>
    <string name="first">1st Place: %1$s, With %2$d Points</string>
    <string name="second">2nd Place: %1$s, With %2$d Points</string>
    <string name="third">3rd Place: %1$s, With %2$d Points</string>
    <string name="forth">4th Place: %1$s, With %2$d Points</string>
    <string name="fifth">5th Place: %1$s, With %2$d Points</string>
    <string name="sixth">6th Place: %1$s, With %2$d Points</string>
    <string name="seventh">7th Place: %1$s, With %2$d Points</string>
    <string name="eighth">8th Place: %1$s, With %2$d Points</string>
    <string name="ninth">9th Place: %1$s, With %2$d Points</string>
    <string name="tenth">10th Place: %1$s, With %2$d Points</string>
    <string name="time">Time - %1% </string>
    <string name="email">EMail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="tictactoeIcon"><![CDATA[https://firebasestorage.googleapis.com/v0/b/gamecenter-4564c.appspot.com/o/tic-tac-toe.png?alt=media&token=0dacc7ff-c905-49ea-b3f8-32e72c1a3eed]]></string>
    <string name="slidingTilesIcon"><![CDATA[https://firebasestorage.googleapis.com/v0/b/gamecenter-4564c.appspot.com/o/puzzle.png?alt=media&token=d8fd5424-91e9-495f-9adb-becba7bf5327]]></string>
    <string name="matchingGameIcon"><![CDATA[https://firebasestorage.googleapis.com/v0/b/gamecenter-4564c.appspot.com/o/poker.png?alt=media&token=20e49ea0-007f-484c-947b-b92897ca7db2]]></string>

</resources>
