<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fall2018.csc2017.GameCentre.GestureDetectGridView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="569dp"
        tools:context="fall2018.csc2017.GameCentre.GameActivity" />

    <Button
        android:id="@+id/UndoButton"
        android:layout_width="206dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:background="@drawable/gradient"
        android:drawableStart="@drawable/ic_action_undo"
        android:fontFamily="@font/montserrat"
        android:text="@string/undo"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/UndoButton"
        android:background="@drawable/gradient"
        android:fontFamily="@font/montserrat"
        android:text="@string/move_counter"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-206dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="52dp"
        android:layout_toEndOf="@+id/UndoButton"
        android:background="@drawable/gradient"
        android:fontFamily="@font/montserrat"
        android:text="@string/time"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp" />

</RelativeLayout>
