<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fall2018.csc2017.GameCentre.DifficultyActivity"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/DifficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/diff_selection"
        android:fontFamily="casual"
        android:text="@string/diff_selection"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/EasyButton"
        android:layout_width="280dp"
        android:layout_height="41dp"
        android:layout_alignEnd="@+id/EasyView"
        android:layout_alignBottom="@+id/EasyView"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorAccent"
        android:clickable="true" />

    <Button
        android:id="@+id/MediumButton"
        android:layout_width="280dp"
        android:layout_height="41dp"
        android:layout_alignEnd="@+id/MediumView"
        android:layout_alignBottom="@+id/MediumView"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorAccent"
        android:clickable="true" />

    <Button
        android:id="@+id/HardButton"
        android:layout_width="280dp"
        android:layout_height="41dp"
        android:layout_alignEnd="@+id/HardView"
        android:layout_alignBottom="@+id/HardView"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorAccent"
        android:clickable="true" />


    <android.support.v7.widget.CardView
        android:id="@+id/EasyView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="450dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/EasyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="false"
                android:fontFamily="@font/montserrat"
                android:text="@string/easy"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/MediumView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="325dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="false"
                android:fontFamily="@font/montserrat"
                android:text="@string/medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="#fff"
                android:textSize="20sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/HardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/HardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="false"
                android:fontFamily="@font/montserrat"
                android:text="@string/hard"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="#fff"
                android:textSize="20sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>